# trunk

./: .gitignore  .gitmodules  .versionrc  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  Trunk.toml  atom.xml  blog-post.css  build.rs  carbon.css  clippy.toml  custom.css  index.html  juice.css  robots.txt  rustfmt.toml  search_index.en.js  sitemap.xml
.convco/template/: commit.hbs  header.hbs  template.hbs
.github/: pull_request_template.md
.github/workflows/: brew.yaml  ci.yaml  docs.yaml  manual-brew.yaml  pages.yaml  release.yaml  stale.yaml
advanced/: index.html
assets/: index.html
blog/: index.html
blog/plugin-system/: index.html
blog/release-0-8-0/: index.html
blog/release-0-9-0/: index.html
blog/v10-v13/: index.html
commands/: index.html
configuration/: index.html
crates/pipelines/: Cargo.toml
crates/pipelines/src/: asset_file.rs  copy_dir.rs  copy_file.rs  css.rs  icon.rs  inline.rs  js.rs  lib.rs  output.rs  pipeline.rs  sass.rs  tailwind_css.rs  util.rs
crates/pipelines/src/assets/: asset.rs  chain.rs  css.rs  icon.rs  inline.rs  js.rs  mod.rs  output.rs  pipeline.rs  sass.rs  tailwind_css.rs
crates/pipelines/src/assets/copy_dir/: mod.rs  tests.rs
crates/pipelines/src/assets/copy_file/: mod.rs  tests.rs
crates/pipelines/src/assets/rust/: cargo.rs  config.rs  mod.rs  wasm_opt.rs
crates/pipelines/src/copy_dir/: mod.rs  tests.rs
crates/pipelines/src/copy_file/: mod.rs  tests.rs
crates/pipelines/src/html/: mod.rs  utils.rs
crates/pipelines/src/rust/: config.rs  mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: app.rs  lib.rs
crates/util/: Cargo.toml
crates/util/src/: archive.rs  asset.rs  error.rs  executable.rs  fs.rs  is_executable.rs  lib.rs  manifest.rs  strip_prefix.rs
data/: index.html  index.scss
examples/behind-reverse-proxy/: README.md  nginx.conf
examples/cargo-manifest/: Cargo.toml  README.md  index.html
examples/cdylib/: Cargo.toml  README.md  index.html
examples/cdylib/src/: lib.rs
examples/failing-rust/: Cargo.toml  README.md  index.html
examples/hello_world_plugin/: Cargo.toml
examples/hooks/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html
examples/hooks/src/: main.rs
examples/hooks/xtask/: Cargo.toml
examples/hooks/xtask/src/: main.rs
examples/initializer/: Cargo.toml  README.md  Trunk.toml  index.html
examples/leptos/: Cargo.toml  README.md  index.html
examples/no-rust/: index.html  index.scss
examples/node-module/: Cargo.toml  Trunk.toml  index.html
examples/node-module/src/: main.rs
examples/plugin/: Cargo.toml  index.html
examples/proxy/: Cargo.toml  README.md  Trunk.toml  docker-compose.yaml  index.html
examples/seed/: Cargo.toml  README.md  index.html
examples/seed/src/: main.rs
examples/sycamore/: .gitignore  Cargo.toml  README.md  index.html
examples/target-path/: Cargo.toml  README.md  index.html
examples/vanilla/: Cargo.toml  README.md  Trunk.toml  index.html
examples/vanilla/src/: index.scss  main.rs  not_minified.css  script.js  script.mjs
examples/wasm_threads/: Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
examples/wasm_threads/.cargo/: config.toml
examples/wasm_threads/assets/: _headers
examples/wasm_threads/src/: main.rs
examples/webworker/: Cargo.toml  index.html
examples/webworker-gloo/: Cargo.toml  index.html
examples/webworker-gloo/src/: lib.rs
examples/webworker-module/: Cargo.toml
examples/webworker-module-sharedworker/: Cargo.toml  index.html
examples/workplace/: Cargo.toml
examples/yaml-config/: Cargo.toml  README.md  Trunk.yaml  index.html
examples/yew/: Cargo.toml  README.md  Trunk.toml  index.html
examples/yew-bootstrap/: Cargo.toml  README.md  index.html
examples/yew-tailwindcss/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
examples/yew-tailwindcss-v4/: Cargo.toml  README.md  Trunk.toml  index.html
examples/yew-tls/: Cargo.toml  README.md  Trunk.toml  index.html
examples/yew/src/: index.scss  inline-scss.scss  main.rs
guide/: .gitignore  404.html  README.md  book.toml  contributing.html  index.html  introduction.html  mdbook-admonish.css  print.html  searcher-c2a407aa.js  searchindex-eebad2cb.js  searchindex.js  searchindex.json  toc-c7bda5b4.js  toc.html  toc.js
guide/advanced/: index.html  initializer.html  javascript_interop.html  library.html  paths.html  proxy.html  startup_event.html
guide/assets/: index.html  minification.html  sri.html
guide/commands/: index.html
guide/configuration/: index.html  schema.html
guide/getting-started/: index.html  installation.html  pre-reqs.html  project.html
guide/src/: SUMMARY.md  contributing.md  introduction.md
guide/theme/: pagetoc.css  pagetoc.js
schemas/: config.json
site/: config.toml
site/content/: _index.md  advanced.md  assets.md  build_time.md  commands.md  configuration.md  trunk.md
site/sass/: blog-post.scss  custom.scss
site/templates/: blog-post.html  blog.html  index.html
src/: autoreload.js  binary.rs  build.rs  common.rs  config.rs  debouncer.rs  download.rs  hooks.rs  lib.rs  main.rs  pipelines.rs  proxy.rs  serve.rs  tls.rs  tools.rs  wasm_opt.rs  watch.rs  ws.rs  ws_client.js
src/cmd/: build.rs  clean.rs  completion.rs  config.rs  core.rs  mod.rs  serve.rs  tools.rs  watch.rs
src/common/: html_rewrite.rs  mod.rs
src/config/: manifest.rs  mod.rs  models.rs  models_test.rs  rt.rs
src/node_packages/: get_package_error.rs  node_package_client.rs
src/pipelines/: apple_touch_icon.rs  apple_touch_icon_precomposed.rs  apple_touch_startup_image.rs  cargo.rs  compression.rs  compression_test.rs  copy_dir.rs  copy_dir_test.rs  copy_file.rs  copy_file_test.rs  copydir.rs  copyfile.rs  css.rs  html.rs  icon.rs  inline.rs  js.rs  manifest.rs  mod.rs  plugin.rs  rust.rs  rust_app.rs  rust_worker.rs  sass.rs  (+3 more)
tests/: examples-yew.rs
trunk/: Cargo.toml
trunk-cli/: Cargo.toml
trunk-derive/: Cargo.toml
trunk-macros/: Cargo.toml
trunk-plugin/: Cargo.toml
trunk-plugin/src/: args.rs  error.rs  lib.rs  output.rs  permissions.rs
(+179 files in other folders)
