[package]
name = "trunk"
version = "0.20.0"
edition = "2021"
description = "Build, bundle & ship your Rust WASM application to the web."
license = "MIT/Apache-2.0"
authors = [
    "Anthony Dodd <dodd.anthonyjosiah@gmail.com>",
    "Jens Reimann <ctron@dentrassi.de>"
]
repository = "https://github.com/trunk-rs/trunk"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool", "compiler"]
rust-version = "1.75.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
async-recursion = "1.0.5"
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.6"
base64 = "0.22"
bytes = "1"
cargo-lock = "9"
cargo_metadata = "0.18.1"
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
directories = "5"
dunce = "1"
envy = "0.4"
flate2 = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
htmlescape = "0.3.1"
humantime = "2"
humantime-serde = "1"
hyper = "1.1"
local-ip-address = "0.6.1"
lol_html = "1.2.1"
mime_guess = "2.0.4"
minify-html = "0.15.0"
minify-js = "0.5.6" # stick with 0.5.x as 0.6 seems to create broken JS
notify = "6"
notify-debouncer-full = "0.3"
once_cell = "1"
open = "5"
oxipng = "9"
parking_lot = "0.12"
remove_dir_all = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["stream", "trust-dns"] }
sha2 = "0.10"
seahash = { version = "4", features = ["use_std"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tar = "0.4"
time = { version = "0.3", features = ["serde-well-known"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs", "sync"] }
tokio-tungstenite = "0.21"
toml = "0.8"
tower-http = { version = "0.5.1", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
zip = "0.6"

# pin lightningcss, used by trunk, also pulled in by minify-html
lightningcss = "=1.0.0-alpha.55"

# required for the update check
crates_io_api = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
rstest = "0.19"

[features]
default = ["update_check", "rustls"]

# use rustls as TLS stack
rustls = [
    "axum-server/tls-rustls",
    "crates_io_api/rustls",
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-native-roots",
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
]

# use native-tls/openssl as TLS stack
native-tls = [
    "axum-server/tls-openssl",
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls",
]

# enable the update check on startup
update_check = [
    "crates_io_api"
]
