[package]
name = "trunk"
version = "0.22.0-beta.1"
edition = "2024"
description = "Build, bundle & ship your Rust WASM application to the web."
license = "MIT/Apache-2.0"
authors = [
    "Anthony Dodd <dodd.anthonyjosiah@gmail.com>",
    "Jens Reimann <ctron@dentrassi.de>",
]
repository = "https://github.com/trunk-rs/trunk"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool", "compiler"]
rust-version = "1.90.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4.41", features = ["gzip", "tokio"] }
async-tar = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = "0.8"
base64 = "0.22"
bytes = "1"
cargo-lock = "11"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.16.2"
directories = "6"
dunce = "1"
flate2 = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
globset = "0.4"
hickory-resolver = { version = "0.25", features = ["system-config"] }
htmlescape = "0.3.1"
http = "1.4"
humantime = "2"
humantime-serde = "1"
local-ip-address = "0.6"
lol_html = "2"
mime_guess = "2"
minify-html = "0.18"
notify = "8"
notify-debouncer-full = "0.7"
open = "5"
oxipng = "10"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "hickory-dns", "json"] }
schemars = { version = "1", features = ["derive"] }
seahash = { version = "4", features = ["use_std"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "=0.9.33" # serde-yaml is deprecated, but "just works", let's see who becomes the next serde_yaml
sha2 = "0.10"
strum = { version = "0.28", features = ["derive"] }
swc_common = { version = "19", features = ["sourcemap"] }
swc_ecma_ast = "21"
swc_ecma_codegen = "24"
swc_ecma_minifier = "46"
swc_ecma_parser = "35"
swc_ecma_transforms_base = "38"
swc_ecma_visit = "21"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs", "sync"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7.18"
toml = "1"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
which = "8"
zip = "8"

# pin lightningcss, used by trunk, also pulled in by minify-html
lightningcss = "=1.0.0-alpha.70"

# required for the update check
crates_io_api = { version = "0.12", default-features = false, optional = true }

# for enabling vendoring
openssl = { version = "0.10", default-features = false, optional = true }


[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.50"

[dev-dependencies]
tempfile = "3"
rstest = "0.26.1"

[features]
default = ["update_check", "rustls"]

# use rustls as TLS stack
rustls = [
    "axum-server/tls-rustls-no-provider",
    "crates_io_api/rustls",
    "reqwest/rustls",
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
]

rustls-aws-lc = [
    "axum-server/tls-rustls",
    "crates_io_api/rustls",
    "reqwest/rustls",
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
]

# use native-tls/openssl as TLS stack
native-tls = [
    "openssl",
    "axum-server/tls-openssl",
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls",
]

# enable the update check on startup
update_check = ["crates_io_api"]

# enable vendoring on crates supporting that
vendored = ["openssl?/vendored"]
