[package]
name = "trunk-plugin"
version = "0.1.0"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"

[dependencies]
trunk-derive = { path = "../trunk-derive" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_cbor = "0.11.1"
thiserror = "1.0.24"
wasmer-runtime = { version = "0.17.1", optional = true }

[features]
runtime = ["wasmer-runtime"]
