[package]
name = "trunk-pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs"] }
seahash = "4"
nipper = "0.1"
tracing = "0.1"
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1.72"
dunce = "1"
cargo-lock = "9"
cargo_metadata = "0.15"

trunk-util = { version = "0.1", path = "../util" }
trunk-tools = { version = "0.1", path = "../tools" }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
