[package]
name = "trunk-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
directories = "5"
once_cell = "1"
tracing = "0.1"
trunk-util = { version = "0.1", path = "../util" }
which = "4"

# reqwest features should be defined by downstream crates.
reqwest = { version = "0.11", default-features = false }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
