[package]
name = "trunk-util"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs"] }
thiserror = "1"
flate2 = "1"
tar = "0.4"
zip = "0.6"
derive_more = "0.99.17"
tracing = "0.1"
futures-util = { version = "0.3", default-features = false }
once_cell = "1"
fs_extra = "1"
remove_dir_all = "0.8"
cargo_metadata = "0.15"
dunce = "1"
