[package]
name = "seed-example"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
seed = "0.8"
serde = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1", features = ["serde-1"] }
enclose = "1"
wasm-bindgen = "=0.2.74" # This is pinned primarily for CI stability.
