[package]
name = "seed-example"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
seed = "0.9.2"
serde = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
indexmap = { version = "1", features = ["serde-1"] }
enclose = "1.1.8"
wasm-bindgen = "=0.2.82"
