[package]
name = "webworker-gloo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
console_error_panic_hook = "0.1"
gloo-console = "0.3"
gloo-worker = "0.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
