[package]
name = "webworker-module-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
