[package]
name = "webworker-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
] }
wasm-bindgen = "=0.2.79"
wee_alloc = "0.4.5"
js-sys = "=0.3.56"
