[package]
name = "yew-example"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "=0.2.70" # This is pinned primarily for CI stability.
wee_alloc = "0.4.5"
ybc = "0.1.4"
yew = "0.17.3"

[features]
default = []
demo-abc = []
demo-xyz = []
