[package]
name = "yew-example"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
ybc = "0.4"
yew = { version = "0.20", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[features]
default = []
demo-abc = []
demo-xyz = []
